more on space and simple time

--- a/MrCAE/scripts/MrCAE_toy1-Copy1.ipynb
+++ b/MrCAE/scripts/MrCAE_toy1-Copy1.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,20 +78,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.8058594381953778\n"
+     ]
+    }
+   ],
    "source": [
     "# mesh grids\n",
     "x = np.linspace(-5, 5, 127)\n",
     "y = np.linspace(-5, 5, 127)\n",
     "t = np.linspace(0, 8*np.pi, 500)\n",
+    "print((t[1]-t[0])*16)\n",
     "xgrid, ygrid, tgrid = np.meshgrid(x, y, t)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +117,10 @@
     "Phi = phi1(xgrid, ygrid, tgrid) + phi2(xgrid, ygrid, tgrid)\n",
     "scaled_Phi = (Phi - Phi.min()) / (Phi.max() - Phi.min())\n",
     "print(Phi.shape)\n",
-    "print(scaled_Phi.shape)"
+    "print(scaled_Phi.shape)\n",
+    "\n",
+    "# data_tuples = (Phi.T, t)\n",
+    "# np.save(data_path, data_tuples)"
    ]
   },
   {
@@ -128,27 +140,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\16kat\\anaconda3\\lib\\site-packages\\torch\\cuda\\__init__.py:52: UserWarning: CUDA initialization: Found no NVIDIA driver on your system. Please check that you have an NVIDIA GPU and installed a driver from http://www.nvidia.com/Download/index.aspx (Triggered internally at  ..\\c10\\cuda\\CUDAFunctions.cpp:100.)\n",
-      "  return torch._C._cuda_getDeviceCount() > 0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# init model & load data\n",
     "data_path = '../data/npy/toy1.npy'\n",
     "model_path = '../model/toy1_smaller'\n",
     "result_path = '../result/toy1_smaller/'\n",
     "\n",
-    "# np.save(data_path, Phi.T)\n",
+    "np.save(data_path, Phi.T)\n",
     "\n",
     "dataset = net.MultiScaleDynamicsDataSet(data_path, n_levels=1)"
    ]
