--- a/multiscale_HiTS/scripts/multiscale_HiTS_exp/model_training.ipynb
+++ b/multiscale_HiTS/scripts/multiscale_HiTS_exp/model_training.ipynb
@@ -188,7 +188,241 @@
       "self.n_dim=  9\n",
       "dataset.n_dim =  9\n",
       "epoch 1000, training loss 0.00025422850740142167, validation loss 0.00042940626735799015\n",
-      "(--> new model saved @ epoch 1000)\n"
+      "(--> new model saved @ epoch 1000)\n",
+      "epoch 2000, training loss 0.00013425225915852934, validation loss 0.0003097242151852697\n",
+      "(--> new model saved @ epoch 2000)\n",
+      "epoch 3000, training loss 0.00012651369615923613, validation loss 0.0002787880366668105\n",
+      "(--> new model saved @ epoch 3000)\n",
+      "epoch 4000, training loss 0.00011759317567339167, validation loss 0.0002461486728861928\n",
+      "(--> new model saved @ epoch 4000)\n",
+      "epoch 5000, training loss 0.00020243307517375797, validation loss 0.000342955463565886\n",
+      "epoch 6000, training loss 8.615716069471091e-05, validation loss 0.00018646361422725022\n",
+      "(--> new model saved @ epoch 6000)\n",
+      "epoch 7000, training loss 0.00015032249211799353, validation loss 0.00028452323749661446\n",
+      "epoch 8000, training loss 0.00011646156781353056, validation loss 0.00023703686019871384\n",
+      "epoch 9000, training loss 0.00010674907389329746, validation loss 0.00023098311794456095\n",
+      "epoch 10000, training loss 8.828646969050169e-05, validation loss 0.00020512887567747384\n",
+      "epoch 11000, training loss 7.477365579688922e-05, validation loss 0.00020093153580091894\n",
+      "epoch 12000, training loss 7.279794226633385e-05, validation loss 0.00018818285025190562\n",
+      "epoch 13000, training loss 7.24620622349903e-05, validation loss 0.00019639867241494358\n",
+      "epoch 14000, training loss 5.1603634346975014e-05, validation loss 0.0002133110974682495\n",
+      "epoch 15000, training loss 6.247064447961748e-05, validation loss 0.0002425975981168449\n",
+      "epoch 16000, training loss 5.314359441399574e-05, validation loss 0.0002468662860337645\n",
+      "epoch 17000, training loss 5.513557334779762e-05, validation loss 0.0002313717413926497\n",
+      "epoch 18000, training loss 7.09306841599755e-05, validation loss 0.00019772149971686304\n",
+      "epoch 19000, training loss 4.97572218591813e-05, validation loss 0.0001986543502425775\n",
+      "epoch 20000, training loss 3.564208964235149e-05, validation loss 0.00019632899784483016\n",
+      "epoch 21000, training loss 2.5595030820113607e-05, validation loss 0.0001303933240706101\n",
+      "(--> new model saved @ epoch 21000)\n",
+      "epoch 22000, training loss 1.7063506675185636e-05, validation loss 0.00011432935571065173\n",
+      "(--> new model saved @ epoch 22000)\n",
+      "epoch 23000, training loss 3.688097058329731e-05, validation loss 0.00011669474770314991\n",
+      "epoch 24000, training loss 2.072969982691575e-05, validation loss 6.597655010409653e-05\n",
+      "(--> new model saved @ epoch 24000)\n",
+      "epoch 25000, training loss 1.4112982171354815e-05, validation loss 4.866308154305443e-05\n",
+      "(--> new model saved @ epoch 25000)\n",
+      "epoch 26000, training loss 1.6763346138759516e-05, validation loss 4.404844730743207e-05\n",
+      "(--> new model saved @ epoch 26000)\n",
+      "epoch 27000, training loss 3.418240157770924e-05, validation loss 8.629128569737077e-05\n",
+      "epoch 28000, training loss 8.824476026347838e-06, validation loss 3.941372415283695e-05\n",
+      "(--> new model saved @ epoch 28000)\n",
+      "epoch 29000, training loss 1.3204628885432612e-05, validation loss 4.184833596809767e-05\n",
+      "epoch 30000, training loss 0.00025348732015118003, validation loss 0.00035497621865943074\n",
+      "k =  1\n",
+      "torch.Size([75, 9])\n",
+      "create model model_D2_noise0.0_0.pt ...\n",
+      "self.n_dim=  9\n",
+      "dataset.n_dim =  9\n",
+      "epoch 1000, training loss 0.0006516365683637559, validation loss 0.0012122123735025525\n",
+      "(--> new model saved @ epoch 1000)\n",
+      "epoch 2000, training loss 0.0005618081777356565, validation loss 0.0010217298986390233\n",
+      "(--> new model saved @ epoch 2000)\n",
+      "epoch 3000, training loss 0.0004183831624686718, validation loss 0.000721945718396455\n",
+      "(--> new model saved @ epoch 3000)\n",
+      "epoch 4000, training loss 0.0006333726923912764, validation loss 0.0015186440432444215\n",
+      "epoch 5000, training loss 0.0004657228710129857, validation loss 0.0010377533035352826\n",
+      "epoch 6000, training loss 0.00039822247345000505, validation loss 0.0012019900605082512\n",
+      "epoch 7000, training loss 0.0003724873240571469, validation loss 0.0011848823633044958\n",
+      "epoch 8000, training loss 0.00029591372003778815, validation loss 0.001229184796102345\n",
+      "epoch 9000, training loss 0.0002462034171912819, validation loss 0.0009682601667009294\n",
+      "epoch 10000, training loss 0.0004003346839454025, validation loss 0.0008506728918291628\n",
+      "epoch 11000, training loss 0.0001638756220927462, validation loss 0.0004369033849798143\n",
+      "(--> new model saved @ epoch 11000)\n",
+      "epoch 12000, training loss 0.0036082747392356396, validation loss 0.00533646997064352\n",
+      "epoch 13000, training loss 0.000657626602333039, validation loss 0.0012662168592214584\n",
+      "epoch 14000, training loss 0.0002366132684983313, validation loss 0.0024298967327922583\n",
+      "epoch 15000, training loss 0.0004446525708772242, validation loss 0.0009365215082652867\n",
+      "epoch 16000, training loss 0.0002573145320639014, validation loss 0.00048318045446649194\n",
+      "epoch 17000, training loss 0.00015935968258418143, validation loss 0.000549298943951726\n",
+      "epoch 18000, training loss 0.0004808838712051511, validation loss 0.0008901227847672999\n",
+      "epoch 19000, training loss 0.0002990519569721073, validation loss 0.0006145870429463685\n",
+      "epoch 20000, training loss 0.0005401450325734913, validation loss 0.0010771441739052534\n",
+      "epoch 21000, training loss 0.00017429387662559748, validation loss 0.0004848373355343938\n",
+      "epoch 22000, training loss 0.00039980633300729096, validation loss 0.0013126448029652238\n",
+      "epoch 23000, training loss 0.0002929747279267758, validation loss 0.0013348428765311837\n",
+      "epoch 24000, training loss 0.00031278483220376074, validation loss 0.001370978425256908\n",
+      "epoch 25000, training loss 0.00039982551243156195, validation loss 0.0008183647878468037\n",
+      "epoch 26000, training loss 0.0002587113413028419, validation loss 0.0009003710583783686\n",
+      "epoch 27000, training loss 0.00019573449390009046, validation loss 0.0007867845706641674\n",
+      "epoch 28000, training loss 0.0001399475004291162, validation loss 0.0010373691329732537\n",
+      "epoch 29000, training loss 0.00044339519809000194, validation loss 0.0014455699129030108\n",
+      "epoch 30000, training loss 8.39670465211384e-05, validation loss 0.000958169111981988\n",
+      "k =  2\n",
+      "torch.Size([75, 9])\n",
+      "create model model_D4_noise0.0_0.pt ...\n",
+      "self.n_dim=  9\n",
+      "dataset.n_dim =  9\n",
+      "epoch 1000, training loss 0.0037962321657687426, validation loss 0.00432369951158762\n",
+      "(--> new model saved @ epoch 1000)\n",
+      "epoch 2000, training loss 0.0017613214440643787, validation loss 0.002306996611878276\n",
+      "(--> new model saved @ epoch 2000)\n",
+      "epoch 3000, training loss 0.001645987038500607, validation loss 0.0027905642054975033\n",
+      "epoch 4000, training loss 0.0038181592244654894, validation loss 0.006389549933373928\n",
+      "epoch 5000, training loss 0.0033745693508535624, validation loss 0.005588425323367119\n",
+      "epoch 6000, training loss 0.0022800201550126076, validation loss 0.004709604196250439\n",
+      "epoch 7000, training loss 0.001734715304337442, validation loss 0.0032246788032352924\n",
+      "epoch 8000, training loss 0.0009038862190209329, validation loss 0.0033260539639741182\n",
+      "epoch 9000, training loss 0.0013222445268183947, validation loss 0.004604539833962917\n",
+      "epoch 10000, training loss 0.0014706396032124758, validation loss 0.0051507605239748955\n",
+      "epoch 11000, training loss 0.0026734217535704374, validation loss 0.005186558701097965\n",
+      "epoch 12000, training loss 0.0016501308418810368, validation loss 0.002657172968611121\n",
+      "epoch 13000, training loss 0.0013886605156585574, validation loss 0.005624362267553806\n",
+      "epoch 14000, training loss 0.0015403145225718617, validation loss 0.002865392481908202\n",
+      "epoch 15000, training loss 0.0007963217212818563, validation loss 0.0017004961846396327\n",
+      "(--> new model saved @ epoch 15000)\n",
+      "epoch 16000, training loss 0.002041654894128442, validation loss 0.003997607622295618\n",
+      "epoch 17000, training loss 0.0008484123973175883, validation loss 0.004220786038786173\n",
+      "epoch 18000, training loss 0.0007704355521127582, validation loss 0.004086483735591173\n",
+      "epoch 19000, training loss 0.0005368090933188796, validation loss 0.004413968417793512\n",
+      "epoch 20000, training loss 0.0014901049435138702, validation loss 0.004298094660043716\n",
+      "epoch 21000, training loss 0.0010225141886621714, validation loss 0.002673747716471553\n",
+      "epoch 22000, training loss 0.0009605216910131276, validation loss 0.001363599905744195\n",
+      "(--> new model saved @ epoch 22000)\n",
+      "epoch 23000, training loss 0.0008942463318817317, validation loss 0.0044976635836064816\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "epoch 24000, training loss 0.0004618132661562413, validation loss 0.0017490761820226908\n",
+      "epoch 25000, training loss 0.0012269964208826423, validation loss 0.004656675271689892\n",
+      "epoch 26000, training loss 0.00038231664802879095, validation loss 0.004187765996903181\n",
+      "epoch 27000, training loss 0.0008155681425705552, validation loss 0.00419790530577302\n",
+      "epoch 28000, training loss 0.0009053208632394671, validation loss 0.003771803807467222\n",
+      "epoch 29000, training loss 0.000519805820658803, validation loss 0.003874997142702341\n",
+      "epoch 30000, training loss 0.00736847473308444, validation loss 0.007439606357365847\n",
+      "k =  3\n",
+      "torch.Size([75, 9])\n",
+      "create model model_D8_noise0.0_0.pt ...\n",
+      "self.n_dim=  9\n",
+      "dataset.n_dim =  9\n",
+      "epoch 1000, training loss 0.20613321661949158, validation loss 0.11075671017169952\n",
+      "(--> new model saved @ epoch 1000)\n",
+      "epoch 2000, training loss 0.019136203452944756, validation loss 0.025407901033759117\n",
+      "(--> new model saved @ epoch 2000)\n",
+      "epoch 3000, training loss 0.008266162127256393, validation loss 0.013551343232393265\n",
+      "(--> new model saved @ epoch 3000)\n",
+      "epoch 4000, training loss 0.02308127097785473, validation loss 0.015807069838047028\n",
+      "epoch 5000, training loss 0.01348541583865881, validation loss 0.030851872637867928\n",
+      "epoch 6000, training loss 0.004188395570963621, validation loss 0.02711733803153038\n",
+      "epoch 7000, training loss 0.004824046976864338, validation loss 0.01673429273068905\n",
+      "epoch 8000, training loss 0.004979394841939211, validation loss 0.03831429407000542\n",
+      "epoch 9000, training loss 0.003561883233487606, validation loss 0.03762410208582878\n",
+      "epoch 10000, training loss 0.060359977185726166, validation loss 0.03980057314038277\n",
+      "epoch 11000, training loss 0.0035951968748122454, validation loss 0.0366785004734993\n",
+      "epoch 12000, training loss 0.015009933151304722, validation loss 0.02043560892343521\n",
+      "epoch 13000, training loss 0.0037190697621554136, validation loss 0.034335218369960785\n",
+      "epoch 14000, training loss 0.007304240018129349, validation loss 0.018700452521443367\n",
+      "epoch 15000, training loss 0.0037239971570670605, validation loss 0.01332793477922678\n",
+      "(--> new model saved @ epoch 15000)\n",
+      "epoch 16000, training loss 0.0033399173989892006, validation loss 0.018733752891421318\n",
+      "epoch 17000, training loss 0.007913270965218544, validation loss 0.03253624215722084\n",
+      "epoch 18000, training loss 0.0032345366198569536, validation loss 0.015247135423123837\n",
+      "epoch 19000, training loss 0.0033666922245174646, validation loss 0.02800820767879486\n",
+      "epoch 20000, training loss 0.002477973001077771, validation loss 0.016130724921822548\n",
+      "epoch 21000, training loss 0.006462933495640755, validation loss 0.02013503760099411\n",
+      "epoch 22000, training loss 0.008905474096536636, validation loss 0.014369131997227669\n",
+      "epoch 23000, training loss 0.003166280686855316, validation loss 0.010635695420205593\n",
+      "(--> new model saved @ epoch 23000)\n",
+      "epoch 24000, training loss 0.009965571574866772, validation loss 0.025198915973305702\n",
+      "epoch 25000, training loss 0.006444912403821945, validation loss 0.012506403028964996\n",
+      "epoch 26000, training loss 0.002520737936720252, validation loss 0.005413869395852089\n",
+      "(--> new model saved @ epoch 26000)\n",
+      "epoch 27000, training loss 0.020395420491695404, validation loss 0.05754406377673149\n",
+      "epoch 28000, training loss 0.00317403394728899, validation loss 0.007559122983366251\n",
+      "epoch 29000, training loss 0.0020260894671082497, validation loss 0.013597769662737846\n",
+      "epoch 30000, training loss 0.004561249632388353, validation loss 0.03838041424751282\n",
+      "k =  4\n",
+      "torch.Size([75, 9])\n",
+      "create model model_D16_noise0.0_0.pt ...\n",
+      "self.n_dim=  9\n",
+      "dataset.n_dim =  9\n",
+      "epoch 1000, training loss 0.07634829729795456, validation loss 0.07204741984605789\n",
+      "(--> new model saved @ epoch 1000)\n",
+      "epoch 2000, training loss 0.08568146079778671, validation loss 0.09911777079105377\n",
+      "epoch 3000, training loss 0.04136262089014053, validation loss 0.05115795135498047\n",
+      "(--> new model saved @ epoch 3000)\n",
+      "epoch 4000, training loss 0.032156240195035934, validation loss 0.03752262890338898\n",
+      "(--> new model saved @ epoch 4000)\n",
+      "epoch 5000, training loss 0.02685517445206642, validation loss 0.04510192200541496\n",
+      "epoch 6000, training loss 0.017775507643818855, validation loss 0.02697206847369671\n",
+      "(--> new model saved @ epoch 6000)\n",
+      "epoch 7000, training loss 0.027333712205290794, validation loss 0.0375482402741909\n",
+      "epoch 8000, training loss 0.03991756588220596, validation loss 0.052481476217508316\n",
+      "epoch 9000, training loss 0.027780180796980858, validation loss 0.03967294842004776\n",
+      "epoch 10000, training loss 0.0230276919901371, validation loss 0.036405015736818314\n",
+      "epoch 11000, training loss 0.018925996497273445, validation loss 0.0406552255153656\n",
+      "epoch 12000, training loss 0.015129958279430866, validation loss 0.06704078614711761\n",
+      "epoch 13000, training loss 0.01175819244235754, validation loss 0.030340461060404778\n",
+      "epoch 14000, training loss 0.026867244392633438, validation loss 0.03910719230771065\n",
+      "epoch 15000, training loss 0.011506006121635437, validation loss 0.020212434232234955\n",
+      "(--> new model saved @ epoch 15000)\n",
+      "epoch 16000, training loss 0.042635299265384674, validation loss 0.046831656247377396\n",
+      "epoch 17000, training loss 0.039908986538648605, validation loss 0.08722908049821854\n",
+      "epoch 18000, training loss 0.01994342729449272, validation loss 0.03141500800848007\n",
+      "epoch 19000, training loss 0.0226407740265131, validation loss 0.03244183957576752\n",
+      "epoch 20000, training loss 0.024791169911623, validation loss 0.03630169481039047\n",
+      "epoch 21000, training loss 0.029302582144737244, validation loss 0.04258924722671509\n",
+      "epoch 22000, training loss 0.012143892236053944, validation loss 0.08781518787145615\n",
+      "epoch 23000, training loss 0.011815550737082958, validation loss 0.03059750609099865\n",
+      "epoch 24000, training loss 0.0140819251537323, validation loss 0.026191141456365585\n",
+      "epoch 25000, training loss 0.007411792874336243, validation loss 0.018326830118894577\n",
+      "(--> new model saved @ epoch 25000)\n",
+      "epoch 26000, training loss 0.16149133443832397, validation loss 0.2327454537153244\n",
+      "epoch 27000, training loss 0.021405426785349846, validation loss 0.025638001039624214\n",
+      "epoch 28000, training loss 0.04269275814294815, validation loss 0.06615158915519714\n",
+      "epoch 29000, training loss 0.01451651006937027, validation loss 0.026334911584854126\n",
+      "epoch 30000, training loss 0.0058950562961399555, validation loss 0.04613235220313072\n",
+      "k =  5\n",
+      "torch.Size([75, 9])\n",
+      "create model model_D32_noise0.0_0.pt ...\n",
+      "self.n_dim=  9\n",
+      "dataset.n_dim =  9\n",
+      "epoch 1000, training loss 0.11597419530153275, validation loss 0.1103360578417778\n",
+      "(--> new model saved @ epoch 1000)\n",
+      "epoch 2000, training loss 0.08822912722826004, validation loss 0.09444721043109894\n",
+      "(--> new model saved @ epoch 2000)\n",
+      "epoch 3000, training loss 0.06559527665376663, validation loss 0.06680184602737427\n",
+      "(--> new model saved @ epoch 3000)\n",
+      "epoch 4000, training loss 0.0640399381518364, validation loss 0.06065239757299423\n",
+      "(--> new model saved @ epoch 4000)\n",
+      "epoch 5000, training loss 0.05140412598848343, validation loss 0.05679750069975853\n",
+      "(--> new model saved @ epoch 5000)\n",
+      "epoch 6000, training loss 0.12111090123653412, validation loss 0.12583859264850616\n",
+      "epoch 7000, training loss 0.03523680567741394, validation loss 0.03943627327680588\n",
+      "(--> new model saved @ epoch 7000)\n",
+      "epoch 8000, training loss 0.06586272269487381, validation loss 0.06485321372747421\n",
+      "epoch 9000, training loss 0.027316836640238762, validation loss 0.04028507322072983\n",
+      "epoch 10000, training loss 0.0257138442248106, validation loss 0.03142497316002846\n",
+      "(--> new model saved @ epoch 10000)\n",
+      "epoch 11000, training loss 0.02638709358870983, validation loss 0.04612261801958084\n",
+      "epoch 12000, training loss 0.03393617272377014, validation loss 0.04422169551253319\n",
+      "epoch 13000, training loss 0.12453490495681763, validation loss 0.1097138449549675\n",
+      "epoch 14000, training loss 0.05954670161008835, validation loss 0.07219858467578888\n",
+      "epoch 15000, training loss 0.02638624794781208, validation loss 0.039159636944532394\n",
+      "epoch 16000, training loss 0.0328231044113636, validation loss 0.04015248641371727\n",
+      "epoch 17000, training loss 0.018411509692668915, validation loss 0.04040130600333214\n"
      ]
     }
    ],
