finnished 3x3 and doing fitting. Doesn't seem to be helping

--- a/multiscale_HiTS/scripts/multiscale_HiTS_exp/model_training.ipynb
+++ b/multiscale_HiTS/scripts/multiscale_HiTS_exp/model_training.ipynb
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +422,26 @@
       "epoch 14000, training loss 0.05954670161008835, validation loss 0.07219858467578888\n",
       "epoch 15000, training loss 0.02638624794781208, validation loss 0.039159636944532394\n",
       "epoch 16000, training loss 0.0328231044113636, validation loss 0.04015248641371727\n",
-      "epoch 17000, training loss 0.018411509692668915, validation loss 0.04040130600333214\n"
+      "epoch 17000, training loss 0.018411509692668915, validation loss 0.04040130600333214\n",
+      "epoch 18000, training loss 0.07857726514339447, validation loss 0.08448164165019989\n",
+      "epoch 19000, training loss 0.04231208935379982, validation loss 0.046592485159635544\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "epoch 20000, training loss 0.02069484069943428, validation loss 0.03210092708468437\n",
+      "epoch 21000, training loss 0.06080968677997589, validation loss 0.06079772487282753\n",
+      "epoch 22000, training loss 0.08216720819473267, validation loss 0.09315094351768494\n",
+      "epoch 23000, training loss 0.03956611081957817, validation loss 0.0612444207072258\n",
+      "epoch 24000, training loss 0.04834964871406555, validation loss 0.048200447112321854\n",
+      "epoch 25000, training loss 0.03919277340173721, validation loss 0.06375813484191895\n",
+      "epoch 26000, training loss 0.045862652361392975, validation loss 0.06388135999441147\n",
+      "epoch 27000, training loss 0.02892586775124073, validation loss 0.04097483679652214\n",
+      "epoch 28000, training loss 0.13723549246788025, validation loss 0.12239737063646317\n",
+      "epoch 29000, training loss 0.04231990873813629, validation loss 0.061388783156871796\n",
+      "epoch 30000, training loss 0.08160924166440964, validation loss 0.08805730938911438\n"
      ]
     }
    ],
