working on encoding big, have data size issues

--- a/scripts/MrCAE_toy1_encode_decode.ipynb
+++ b/scripts/MrCAE_toy1_encode_decode.ipynb
@@ -127,9 +127,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "self.data.shape =  torch.Size([500, 1, 127, 127])\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -141,18 +148,19 @@
    ],
    "source": [
     "# init model & load data\n",
-    "data_path = '../data/npy/toy1.npy'\n",
+    "data_path = '../data/toy1'#toy1.npy'\n",
     "model_path = '../model/toy1/'\n",
     "result_path = '../result/toy1/'\n",
     "\n",
-    "np.save(data_path, scaled_Phi.T)\n",
+    "full_data_path = os.path.join(data_path, 'toy1.npy')\n",
+    "# np.save(full_data_path, scaled_Phi.T)\n",
     "\n",
-    "dataset = net.MultiScaleDynamicsDataSet(data_path, n_levels=5)"
+    "dataset = net.MultiScaleDynamicsDataSet(full_data_path, n_levels=5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -172,11 +180,11 @@
       "['activation', 'L0_Conv_0', 'L0_deConv_0']\n",
       "losses printing format: local: mse/max/overall, global: mse/max/overall\n",
       "epoch [1/3000]\n",
-      "[training set] local: 0.0033/0.0077/0.0055, global: 0.0033/0.0520/0.0277\n",
-      "[validation set] local: 0.0035/0.0075/0.0055, global: 0.0036/0.0502/0.0269\n",
+      "[training set] local: 0.0015/0.0057/0.0036, global: 0.0016/0.0489/0.0252\n",
+      "[validation set] local: 0.0015/0.0064/0.0039, global: 0.0016/0.0535/0.0275\n",
       "epoch [300/3000]:\n",
-      "[training set] local: 0.0001/0.0047/0.0024, global: 0.0001/0.0487/0.0244\n",
-      "[validation set] local: 0.0001/0.0046/0.0024, global: 0.0001/0.0474/0.0238\n",
+      "[training set] local: 0.0002/0.0045/0.0023, global: 0.0002/0.0475/0.0238\n",
+      "[validation set] local: 0.0002/0.0049/0.0026, global: 0.0002/0.0513/0.0258\n",
       "early stopping at 300th iteration due to satisfying reconstruction!\n",
       "-------------------------------------------------\n"
      ]
@@ -197,7 +205,7 @@
        ")"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -241,6 +249,137 @@
     "n_step = n_snapshots // 6\n",
     "\n",
     "model = models['model_L0_0']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "data.size() =  torch.Size([350, 1, 127, 127])\n",
+      "data.size() =  torch.Size([100, 1, 127, 127])\n",
+      "data.size() =  torch.Size([50, 1, 127, 127])\n",
+      "data.size() =  torch.Size([350, 1, 63, 63])\n",
+      "data.size() =  torch.Size([100, 1, 63, 63])\n",
+      "data.size() =  torch.Size([50, 1, 63, 63])\n",
+      "data.size() =  torch.Size([350, 1, 31, 31])\n",
+      "data.size() =  torch.Size([100, 1, 31, 31])\n",
+      "data.size() =  torch.Size([50, 1, 31, 31])\n",
+      "\n",
+      "L0_Conv_0\n",
+      "pad\n",
+      "L0_deConv_0\n",
+      "chop\n",
+      "self.n_filter_groups_each_level =  1\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = models['model_L0_0']\n",
+    "i = 0\n",
+    "\n",
+    "_, _, data = dataset.obtain_data_at_current_level(level=1)\n",
+    "print()\n",
+    "# print(model.cur_level)\n",
+    "output, _, _, _ = model(data[[0], :, :, :], model.cur_level, verbose = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "to_encode_raw shape =  (100, 500, 127, 127)\n"
+     ]
+    }
+   ],
+   "source": [
+    "def apply_local_op(data, mode='conv', ave=True):\n",
+    "    \"\"\"\n",
+    "    :param data: data to be processed\n",
+    "    :param device: which device is the data placed in?\n",
+    "    :param mode: string, 'conv' or 'deconv'\n",
+    "    :param ave: if to use local average or sample the center\n",
+    "    :return: processed data\n",
+    "    \"\"\"\n",
+    "    n_data_points, in_channels, out_channels, n_per_dim, _ = data.size()\n",
+    "    n = min(in_channels, out_channels)\n",
+    "    print(\"data.size() = \", data.size())\n",
+    "#     in_channels= 1\n",
+    "#     out_channels = 1\n",
+    "#     n = 1\n",
+    "    op = torch.nn.Conv2d(out_channels, out_channels, 3, stride=2, padding=0)\n",
+    "    op.weight.data = torch.zeros(op.weight.data.size())\n",
+    "    print(\"op.weight.data = \", op.weight.data.size())\n",
+    "    op.bias.data = torch.zeros(op.bias.data.size())\n",
+    "    for i in range(n):\n",
+    "        print(\"op.weight.data[i, i, 1, 1].size() = \", op.weight.data[i, i, 1, 1].size())\n",
+    "        op.weight.data[i, i, 1, 1] = torch.ones(op.weight.data[i, i, 1, 1].size())\n",
+    "\n",
+    "    # make them non-trainable\n",
+    "    for param in op.parameters():\n",
+    "        param.requires_grad = False\n",
+    "\n",
+    "    transformed = np.zeros((in_channels, out_channels, n_per_dim//2, n_per_dim//2))\n",
+    "    print(\"transformed shape = \", transformed.shape)\n",
+    "#     for i in range(in_channels//)\n",
+    "#     print(op(data).shape)\n",
+    "    return op(data)\n",
+    "\n",
+    "\n",
+    "#save encoded data\n",
+    "\n",
+    "to_encode_path = os.path.join(data_path, 'to_encode.npy')\n",
+    "# to_encode_raw = np.load(to_encode_path)\n",
+    "print(\"to_encode_raw shape = \", to_encode_raw.shape)\n",
+    "\n",
+    "n_levels = 5\n",
+    "level = 0\n",
+    "# print(data.shape)\n",
+    "to_encode = torch.tensor(to_encode_raw)\n",
+    "\n",
+    "to_encode_right_size = torch.zeros((to_encode.size()))\n",
+    "\n",
+    "n_runs, _,_,_ = to_encode.size()\n",
+    "\n",
+    "for r in range(n_runs):\n",
+    "    print(\"r = \", r)\n",
+    "    to_encode_this = to_encode[0].unsqueeze(1).float()\n",
+    "    for i in range(n_levels - level - 1):\n",
+    "        to_encode_data = apply_local_op((to_encode_this), ave=False)\n",
+    "        to_encode_right_size[r, :,0,:,:] = to_encode_data\n",
+    "    \n",
+    "print(\"to_encode_right_size shape = \", to_encode_right_size.shape)\n",
+    "ghj\n",
+    "\n",
+    "\n",
+    "# return train_data\n",
+    "    \n",
+    "# np.save(full_data_path, scaled_Phi.T)\n",
+    "\n",
+    "# dataset_encode = net.MultiScaleDynamicsDataSet(to_encode_path, n_levels=5)\n",
+    "\n",
+    "level = 0\n",
+    "filter_group_num = 0\n",
+    "model = models['model_L{}_{}'.format(level, filter_group_num)]\n",
+    "# data = dataset_encode.obtain_data_at_current_level_all(level=0)\n",
+    "\n",
+    "encoded = model.encode(data, model.cur_level)#, verbose = True)\n",
+    "decoded = model.decode(encoded, model.cur_level)\n",
+    "\n",
+    "print(encoded.shape)\n",
+    "print(decoded.shape)\n",
+    "\n",
+    "#save encoded data \n",
+    "np.save(os.path.join(data_path, 'data_L{}_{}'.format(level, filter_group_num)), encoded.detach().numpy())"
    ]
   },
   {
