--- a/scripts/model_training_time.ipynb
+++ b/scripts/model_training_time.ipynb
@@ -33,7 +33,7 @@
     "import numpy as np\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
-    "module_path = os.path.abspath(os.path.join('../../src/'))\n",
+    "module_path = os.path.abspath(os.path.join('../src/'))\n",
     "if module_path not in sys.path:\n",
     "    sys.path.append(module_path)\n",
     "    \n",
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,25 +51,42 @@
     "t = np.linspace(0, 8*np.pi, 500)\n",
     "k = 0                         # model index: should be in {0, 2, ..., 10}\n",
     "dt = t[1] - t[0]#0.01# 0.0005                     # time unit: 0.0005 for Lorenz and 0.01 for others\n",
-    "system = 'toy1_4x4'         # system name: 'Hyperbolic', 'Cubic', 'VanDerPol', 'Hopf' or 'Lorenz'\n",
-    "total_dim = 16\n",
+    "system = 'toy1'#_4x4'         # system name: 'Hyperbolic', 'Cubic', 'VanDerPol', 'Hopf' or 'Lorenz'\n",
+    "# total_dim = 16\n",
     "noise = 0.0                   # noise percentage: 0.00, 0.01 or 0.02\n",
     "\n",
     "lr = 1e-3                     # learning rate\n",
     "max_epoch = 100000            # the maximum training epoch \n",
     "batch_size = 320              # training batch size\n",
-    "arch = [total_dim, 128, 128, 128, total_dim]  # architecture of the neural network"
+    "# arch = [total_dim, 128, 128, 128, total_dim]  # architecture of the neural network"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(500, 1, 3, 3)\n"
+     ]
+    }
+   ],
    "source": [
     "# paths\n",
-    "data_dir = os.path.join('../../data/', system)\n",
-    "model_dir = os.path.join('../../models/', system)\n",
+    "data_dir = os.path.join('../data/', system)\n",
+    "model_dir = os.path.join('../model/', system)\n",
+    "\n",
+    "level = 0\n",
+    "filter_group_num = 0\n",
+    "encoded = np.load(os.path.join(data_dir, 'data_L{}_{}.npy'.format(level, filter_group_num)))\n",
+    "\n",
+    "print(encoded.shape)\n",
+    "n_steps, _, n_per_dim, _ = encoded.shape\n",
+    "total_dim = n_per_dim **2\n",
+    "arch = [total_dim, 128, 128, 128, total_dim] \n",
     "\n",
     "# global const\n",
     "n_forward = 5\n",
