--- a/scripts/MrCAE_toy1_encode_decode.ipynb
+++ b/scripts/MrCAE_toy1_encode_decode.ipynb
@@ -290,14 +290,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "to_encode_raw shape =  (100, 500, 127, 127)\n"
+      "to_encode_raw shape =  (127, 127, 5000)\n",
+      "data.size() =  torch.Size([5000, 1, 127, 127])\n",
+      "op.weight.data =  torch.Size([1, 1, 3, 3])\n",
+      "op.weight.data[i, i, 1, 1].size() =  torch.Size([])\n",
+      "transformed shape =  (5000, 1, 63, 63)\n",
+      "data.size() =  torch.Size([5000, 1, 63, 63])\n",
+      "op.weight.data =  torch.Size([1, 1, 3, 3])\n",
+      "op.weight.data[i, i, 1, 1].size() =  torch.Size([])\n",
+      "transformed shape =  (5000, 1, 31, 31)\n",
+      "data.size() =  torch.Size([5000, 1, 31, 31])\n",
+      "op.weight.data =  torch.Size([1, 1, 3, 3])\n",
+      "op.weight.data[i, i, 1, 1].size() =  torch.Size([])\n",
+      "transformed shape =  (5000, 1, 15, 15)\n",
+      "data.size() =  torch.Size([5000, 1, 15, 15])\n",
+      "op.weight.data =  torch.Size([1, 1, 3, 3])\n",
+      "op.weight.data[i, i, 1, 1].size() =  torch.Size([])\n",
+      "transformed shape =  (5000, 1, 7, 7)\n",
+      "to_encode shape =  torch.Size([5000, 1, 7, 7])\n",
+      "torch.Size([5000, 1, 3, 3])\n"
      ]
     }
    ],
@@ -310,7 +328,7 @@
     "    :param ave: if to use local average or sample the center\n",
     "    :return: processed data\n",
     "    \"\"\"\n",
-    "    n_data_points, in_channels, out_channels, n_per_dim, _ = data.size()\n",
+    "    in_channels, out_channels, n_per_dim, _ = data.size()\n",
     "    n = min(in_channels, out_channels)\n",
     "    print(\"data.size() = \", data.size())\n",
     "#     in_channels= 1\n",
@@ -340,25 +358,25 @@
     "to_encode_path = os.path.join(data_path, 'to_encode.npy')\n",
     "# to_encode_raw = np.load(to_encode_path)\n",
     "print(\"to_encode_raw shape = \", to_encode_raw.shape)\n",
+    "# ghj\n",
     "\n",
     "n_levels = 5\n",
     "level = 0\n",
     "# print(data.shape)\n",
-    "to_encode = torch.tensor(to_encode_raw)\n",
+    "to_encode = torch.tensor(to_encode_raw).T.unsqueeze(1).float()\n",
     "\n",
-    "to_encode_right_size = torch.zeros((to_encode.size()))\n",
+    "# to_encode_right_size = torch.zeros((to_encode.size()))\n",
     "\n",
-    "n_runs, _,_,_ = to_encode.size()\n",
+    "# n_runs, _,_,_ = to_encode.size()\n",
     "\n",
-    "for r in range(n_runs):\n",
-    "    print(\"r = \", r)\n",
-    "    to_encode_this = to_encode[0].unsqueeze(1).float()\n",
-    "    for i in range(n_levels - level - 1):\n",
-    "        to_encode_data = apply_local_op((to_encode_this), ave=False)\n",
-    "        to_encode_right_size[r, :,0,:,:] = to_encode_data\n",
+    "# for r in range(n_runs):\n",
+    "#     print(\"r = \", r)\n",
+    "# to_encode_this = to_encode[0].unsqueeze(1).float()\n",
+    "for i in range(n_levels - level - 1):\n",
+    "    to_encode = apply_local_op((to_encode), ave=False)\n",
+    "#     to_encode_right_size[r, :,0,:,:] = to_encode_data\n",
     "    \n",
-    "print(\"to_encode_right_size shape = \", to_encode_right_size.shape)\n",
-    "ghj\n",
+    "print(\"to_encode shape = \", to_encode.shape)\n",
     "\n",
     "\n",
     "# return train_data\n",
@@ -372,11 +390,11 @@
     "model = models['model_L{}_{}'.format(level, filter_group_num)]\n",
     "# data = dataset_encode.obtain_data_at_current_level_all(level=0)\n",
     "\n",
-    "encoded = model.encode(data, model.cur_level)#, verbose = True)\n",
-    "decoded = model.decode(encoded, model.cur_level)\n",
+    "encoded = model.encode(to_encode, model.cur_level)#, verbose = True)\n",
+    "# decoded = model.decode(encoded, model.cur_level)\n",
     "\n",
     "print(encoded.shape)\n",
-    "print(decoded.shape)\n",
+    "# print(decoded.shape)\n",
     "\n",
     "#save encoded data \n",
     "np.save(os.path.join(data_path, 'data_L{}_{}'.format(level, filter_group_num)), encoded.detach().numpy())"
