working on cleaning up

--- a/scripts/data_generation.ipynb
+++ b/scripts/data_generation.ipynb
@@ -102,7 +102,7 @@
     "Phi = phi1(xgrid, ygrid, tgrid) + phi2(xgrid, ygrid, tgrid)\n",
     "scaled_Phi = (Phi - Phi.min()) / (Phi.max() - Phi.min())\n",
     "print(\"scaled_Phi.shape = \", scaled_Phi.shape)\n",
-    "np.save(os.path.join(data_dir, 'to_encode.npy'), scaled_Phi.T)"
+    "np.save(os.path.join(data_dir, 'data.npy'), scaled_Phi.T)"
    ]
   },
   {
