--- a/scripts/MrCAE_toy1_train_n_encode.ipynb
+++ b/scripts/MrCAE_toy1_train_n_encode.ipynb
@@ -299,6 +299,58 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'tqdm' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-20-3244948a3513>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mtimes\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m \u001b[1;32mfor\u001b[0m \u001b[0mmodel\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mtqdm\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmodels\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      6\u001b[0m     \u001b[0mstart\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtime\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtime\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m     \u001b[0my_preds\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0muni_scale_forecast\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtorch\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtensor\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mval_data\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m:\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfloat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mn_steps\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mn_steps\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'tqdm' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# # uniscale time-stepping with NN\n",
+    "preds_mse = list()\n",
+    "times = list()\n",
+    "\n",
+    "for model in tqdm(models):\n",
+    "    start = time.time()\n",
+    "    y_preds = model.uni_scale_forecast(torch.tensor(val_data[:, 0, :]).float(), n_steps=n_steps)\n",
+    "    print(y_preds.shape)\n",
+    "    end = time.time()\n",
+    "    times.append(end - start)\n",
+    "    preds_mse.append(criterion(torch.tensor(val_data[:, 1:, :]).float(), y_preds).mean(-1))\n",
+    "    \n",
+    "# visualize forecasting error at each time step    \n",
+    "fig = plt.figure(figsize=(20, 8))\n",
+    "colors=iter(plt.cm.rainbow(np.linspace(0, 1, len(ks))))\n",
+    "print(colors)\n",
+    "for k in range(len(ks)):\n",
+    "    err = preds_mse[k]\n",
+    "    print(err.shape)\n",
+    "    mean = err.mean(0).detach().numpy()\n",
+    "    rgb = next(colors)\n",
+    "#     print(mean.shape)\n",
+    "#     print(len(t))\n",
+    "#     print(t)\n",
+    "    plt.semilogy(mean, linestyle='-', color=rgb, linewidth=3.0, label='$\\Delta\\ t$={}dt'.format(step_sizes[k]))\n",
+    "plt.legend(fontsize=20, loc='upper right')\n",
+    "plt.xticks(fontsize=20)\n",
+    "plt.yticks(fontsize=20)\n",
+    "\n",
+    "plt.ylim([1e-5, 10])\n",
+    "plt.xlim([0, len(t)])\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
    "outputs": [
