--- a/scripts/model_training_time.ipynb
+++ b/scripts/model_training_time.ipynb
@@ -185,65 +185,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "k =  8\n",
-      "torch.Size([1, 9])\n",
-      "create model model_D256_noise0.0_0.pt ...\n",
-      "self.n_dim=  9\n",
-      "dataset.n_dim =  9\n",
-      "epoch 1000, training loss 4.0479997551301494e-05, validation loss 4.8220685130218044e-05\n",
-      "(--> new model saved @ epoch 1000)\n",
-      "epoch 2000, training loss 2.5171135348500684e-05, validation loss 7.928694685688242e-05\n",
-      "epoch 3000, training loss 2.1627847672789358e-05, validation loss 8.024937415029854e-05\n",
-      "epoch 4000, training loss 2.6440631700097583e-05, validation loss 6.376430974341929e-05\n",
-      "epoch 5000, training loss 0.00015018825070001185, validation loss 0.0002995535032823682\n",
-      "epoch 6000, training loss 2.2553202143171802e-05, validation loss 4.475070454645902e-05\n",
-      "(--> new model saved @ epoch 6000)\n",
-      "epoch 7000, training loss 3.471951276878826e-05, validation loss 7.577236101496965e-05\n",
-      "epoch 8000, training loss 0.000160580690135248, validation loss 4.3616404582280666e-05\n",
-      "(--> new model saved @ epoch 8000)\n",
-      "epoch 9000, training loss 4.702523256128188e-06, validation loss 4.647011883207597e-05\n",
-      "epoch 10000, training loss 8.075342520896811e-06, validation loss 5.3976054914528504e-05\n",
-      "epoch 11000, training loss 4.379209713079035e-05, validation loss 3.5821896744892e-05\n",
-      "(--> new model saved @ epoch 11000)\n",
-      "epoch 12000, training loss 8.870916644809768e-06, validation loss 4.289461503503844e-05\n",
-      "epoch 13000, training loss 2.1103329345351085e-05, validation loss 5.517571480595507e-05\n",
-      "epoch 14000, training loss 1.027531561703654e-05, validation loss 4.241242277203128e-05\n",
-      "epoch 15000, training loss 5.967922788840951e-06, validation loss 7.445724622812122e-05\n",
-      "epoch 16000, training loss 1.5962188626872376e-05, validation loss 8.690072718309239e-05\n",
-      "epoch 17000, training loss 5.965968739474192e-06, validation loss 4.558946602628566e-05\n",
-      "epoch 18000, training loss 3.4011884508799994e-06, validation loss 6.219612259883434e-05\n",
-      "epoch 19000, training loss 1.1482188710942864e-05, validation loss 4.700775389210321e-05\n",
-      "epoch 20000, training loss 6.973871677473653e-06, validation loss 7.58074238547124e-05\n",
-      "epoch 21000, training loss 0.0003949138626921922, validation loss 0.0006036204867996275\n",
-      "epoch 22000, training loss 2.8785550512111513e-06, validation loss 5.763119406765327e-05\n",
-      "epoch 23000, training loss 2.20866627387295e-06, validation loss 6.428342021536082e-05\n",
-      "epoch 24000, training loss 9.30065269244551e-08, validation loss 4.3572748836595565e-05\n",
-      "epoch 25000, training loss 2.8494788750776934e-08, validation loss 4.383637133287266e-05\n",
-      "epoch 26000, training loss 1.788782810763223e-06, validation loss 5.4303789511322975e-05\n",
-      "epoch 27000, training loss 4.1758385123102926e-06, validation loss 5.061093543190509e-05\n",
-      "epoch 28000, training loss 1.5874211101163382e-07, validation loss 4.411229383549653e-05\n",
-      "epoch 29000, training loss 1.1931539312115547e-08, validation loss 5.253970448393375e-05\n",
-      "epoch 30000, training loss 4.1180853865840916e-11, validation loss 5.250491085462272e-05\n",
-      "k =  9\n"
-     ]
-    },
-    {
-     "ename": "AssertionError",
-     "evalue": "",
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-7-afdbf5afb3e0>, line 1)",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-11-a603e3be39ac>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"k = \"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mk\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m     \u001b[0mstep_size\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m2\u001b[0m\u001b[1;33m**\u001b[0m\u001b[0mk\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m     \u001b[0mdataset\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnet\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mDataSet\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtrain_data\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mval_data\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtest_data\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdt\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mstep_size\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mn_forward\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdataset\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtrain_x\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m     \u001b[0mmodel_name\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'model_D{}_noise{}_0.pt'\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstep_size\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnoise\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\OneDrive - acornonsite.com\\Time_Space_multiscale\\src\\utils_time.py\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, train_data, val_data, test_data, dt, step_size, n_forward)\u001b[0m\n\u001b[0;32m     18\u001b[0m         \u001b[0mn_val\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mval_steps\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0m_\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mval_data\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     19\u001b[0m         \u001b[0mn_test\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtest_steps\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0m_\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtest_data\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 20\u001b[1;33m         \u001b[1;32massert\u001b[0m \u001b[0mstep_size\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mn_forward\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;36m1\u001b[0m \u001b[1;33m<=\u001b[0m \u001b[0mtrain_steps\u001b[0m \u001b[1;32mand\u001b[0m \u001b[0mstep_size\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mn_forward\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;36m1\u001b[0m \u001b[1;33m<=\u001b[0m \u001b[0mval_steps\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     21\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     22\u001b[0m         \u001b[1;31m# params\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mAssertionError\u001b[0m: "
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-7-afdbf5afb3e0>\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    for k in range(min_k, max_k)\u001b[0m\n\u001b[1;37m                                ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -266,7 +216,7 @@
     "\n",
     "    # training\n",
     "    model.train_net(dataset, max_epoch=30000, batch_size=batch_size, lr=lr,\n",
-    "                    model_path=os.path.join(model_dir, model_name))"
+    "                    model_path=model_pathos.path.join(model_dir, model_name))"
    ]
   },
   {
