--- a/scripts/MrCAE_toy2_everything_averages.ipynb
+++ b/scripts/MrCAE_toy2_everything_averages.ipynb
@@ -134,45 +134,11 @@
     "\n",
     "    return op(data)\n",
     "\n",
-    "def apply_mask(data, mask, mask_type='resolved', width=1):\n",
-    "    \"\"\"\n",
-    "    :param data: data to be processed\n",
-    "    :param mask: mask, a 2D torch tensor of 0s and 1s\n",
-    "    :param mask_type: resolved map or unresolved map\n",
-    "    :param width: int, specify how large the region is\n",
-    "    :return: a 4D torch tensor represents masked data\n",
-    "    \"\"\"\n",
-    "    if not isinstance(width, int):\n",
-    "        raise ValueError('width should be a positive integer!')\n",
-    "\n",
-    "    # convert to unresolved mask\n",
-    "    if mask_type == 'resolved':\n",
-    "        mask = 1 - mask\n",
-    "        # print(mask)\n",
-    "    elif mask_type == 'unresolved':\n",
-    "        mask = mask\n",
-    "    else:\n",
-    "        raise ValueError('mask_type could only be resolved or unresolved!')\n",
-    "\n",
-    "#     # expansion\n",
-    "#     dx = [i for i in range(-width, width+1)]\n",
-    "#     dy = [i for i in range(-width, width+1)]\n",
-    "#     m, n = mask.size()\n",
-    "#     for c in mask.nonzero():\n",
-    "#         x, y = int(c[0]), int(c[1])\n",
-    "#         for i in range(2*width+1):\n",
-    "#             for j in range(2*width+1):\n",
-    "#                 if 0 <= x + dx[i] < m and 0 <= y + dy[j] < n:\n",
-    "#                     mask[x + dx[i], y + dy[j]] = 1\n",
-    "\n",
-    "    # apply\n",
-    "#     print(\"data shape = \", data.shape)\n",
-    "#     print(\"mask.unsqueeze(0).unsqueeze(0).float() shape = \", mask.unsqueeze(0).unsqueeze(0).float().shape)\n",
-    "    masked_data = data * mask.unsqueeze(0).unsqueeze(0).float()\n",
-    "    return masked_data\n",
     "\n",
     "def grow(data, size_full=128):\n",
-    "#     print(\"growing\")\n",
+    "    '''\n",
+    "    Grow tensor from any size to the full size default 128\n",
+    "    '''\n",
     "    data = make_size_4(data)\n",
     "    n_points, _, size_small, _ = data.shape\n",
     "    divide = size_full // size_small\n",
@@ -188,7 +154,6 @@
     "    '''determine the next level make up with new map, old map and unresolved \n",
     "    All tensors\n",
     "    '''\n",
-    "#     print('making next layer')\n",
     "    multi = grow(data_big, size) * (1-grow(unresolved, size)) + grow(data_small, size)*grow(unresolved, size)\n",
     "    return multi\n",
     "\n",
@@ -196,28 +161,30 @@
     "    return decrease_to_size(torch.tensor(data).unsqueeze(1), size)\n",
     "\n",
     "def MSE(data1, data2, size_small, tol = 1e-5, size = 128):\n",
-    "#     print(\"data1 shape = \", data1.shape)\n",
-    "#     print(\"data2 shape = \", data2.shape)\n",
+    "    '''\n",
+    "    Finds the mean square error of two tensors. will return (bol, array, bol array). \n",
+    "    Arrays are of size (size_small, size_small)\n",
+    "    '''\n",
     "    data1 = make_size_4(data1)\n",
     "    data2 = make_size_4(data2)\n",
     "    mse = np.mean((grow(data1, size) - grow(data2, size))**2, axis = 0)\n",
     "    \n",
-    "#     print(\"mse shape = \", mse.shape)\n",
+    "\n",
     "    mse_smaller = decrease_to_size(torch.tensor(mse).unsqueeze(0).unsqueeze(0), size_small)\n",
     "    \n",
     "    loss_summary = mse_smaller[0,0]\n",
-    "#     print(\"max_loss = \", loss_summary.max())\n",
     "    \n",
     "    return loss_summary.max() <= tol, loss_summary, loss_summary <= tol\n",
     "\n",
     "def make_size_4(data):\n",
+    "    '''Makes data array/tensor to the right size of (n,1,n_dim,d_dim)'''\n",
     "    data = torch.tensor(data)\n",
     "    if len(data.shape) == 2:\n",
     "        data = data.unsqueeze(0)\n",
     "    if len(data.shape) == 3:\n",
     "        data = data.unsqueeze(1)\n",
     "    assert (len(data.shape) == 4)\n",
-    "    return data"
+    "    return data\n"
    ]
   },
   {
