--- a/remake/toy2_multiscale_model_fitting.ipynb
+++ b/remake/toy2_multiscale_model_fitting.ipynb
@@ -133,7 +133,7 @@
     "    if not torch.is_tensor(data): #needs to be a tensor\n",
     "        data = torch.tensor(data)\n",
     "        \n",
-    "    assert len(data.shape)\n",
+    "    assert len(data.shape) == 4\n",
     "#     if data.shape != 4:\n",
     "#         print(\"data.shape = \", data.shape)\n",
     "#         print(\"data.shape should be of length 4\")\n",
@@ -167,142 +167,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(100, 500, 128, 128)\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'ave_one_level' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-3-130514a9d327>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtrain_data\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mave_one_level\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtrain_data\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'ave_one_level' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "print(train_data.shape)\n",
-    "print(ave_one_level(train_data).shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "def apply_local_op(data, device, mode='conv', ave=True):\n",
-    "    \n",
-    "    '''\n",
-    "    Shrinks data to certain size; either averages or takes endpoints\n",
-    "    \n",
-    "    inputs:\n",
-    "        data: array of size (n_points, n_timesteps, dim, dim) that will shrink\n",
-    "        low_dim: int, size to shrink to, low_dim must be less than or equal to dim\n",
-    "        average: boolean, True will average, False will just take endpoints\n",
-    "        \n",
-    "    output:\n",
-    "        data: array of size (n_points, n_timesteps, low_dim, low_dim)\n",
-    "    '''\n",
-    "    \n",
-    "    \"\"\"\n",
-    "    :param data: data to be processed\n",
-    "    :param device: which device is the data placed in?\n",
-    "    :param mode: string, 'conv' or 'deconv'\n",
-    "    :param ave: if to use local average or sample the center\n",
-    "    :return: processed data\n",
-    "    \"\"\"\n",
-    "    in_channels, out_channels = 1,1#, _, _ = data.size()\n",
-    "#     print(\"data.size() = \", data.size())\n",
-    "    n = min(in_channels, out_channels)\n",
-    "    if mode == 'conv':\n",
-    "        op = torch.nn.Conv2d(out_channels, out_channels, 2, stride=2, padding=0).to(device)\n",
-    "    elif mode == 'deconv':\n",
-    "        op = torch.nn.ConvTranspose2d(out_channels, out_channels, 3, stride=2, padding=0).to(device)\n",
-    "    else:\n",
-    "        raise ValueError('mode can only be conv or deconv!')\n",
-    "    op.weight.data = torch.zeros(op.weight.data.size()).to(device)\n",
-    "    op.bias.data = torch.zeros(op.bias.data.size()).to(device)\n",
-    "\n",
-    "    for i in range(n):\n",
-    "        if mode == 'conv':\n",
-    "            if ave:\n",
-    "                op.weight.data[i, i, :, :] = torch.ones(op.weight.data[i, i, :, :].size()).to(device) / 4\n",
-    "            else:\n",
-    "                op.weight.data[i, i, 1, 1] = torch.ones(op.weight.data[i, i, 1, 1].size()).to(device)\n",
-    "        elif mode == 'deconv':\n",
-    "            op.weight.data[i, i, :, :] = torch.ones(op.weight.data[i, i, :, :].size()).to(device) / 4\n",
-    "            op.weight.data[i, i, 0, 1] += 1 / 4\n",
-    "            op.weight.data[i, i, 1, 0] += 1 / 4\n",
-    "            op.weight.data[i, i, 1, 2] += 1 / 4\n",
-    "            op.weight.data[i, i, 2, 1] += 1 / 4\n",
-    "            op.weight.data[i, i, 1, 1] += 1 / 4\n",
-    "            op.weight.data[i, i, 1, 1] += 1 / 2\n",
-    "\n",
-    "    # make them non-trainable\n",
-    "    for param in op.parameters():\n",
-    "        param.requires_grad = False\n",
-    "\n",
-    "    return op(data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(100, 500, 128, 128)\n",
-      "torch.Size([100, 500, 128, 128])\n",
-      "torch.Size([50000, 1, 128, 128])\n",
-      "torch.Size([50000, 1, 64, 64])\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(train_data.shape)\n",
-    "# train_data_tensor = torch.tensor(train_data)\n",
-    "print(torch.tensor(train_data).size())\n",
-    "to_shrink = torch.flatten(train_data_tensor, 0,1).unsqueeze(1)\n",
-    "print(to_shrink.size())\n",
-    "\n",
-    "smaller = apply_local_op(to_shrink.float(), 'cpu',)\n",
-    "print( smaller.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "torch.Size([100, 500, 64, 64])\n"
-     ]
-    }
-   ],
-   "source": [
-    "grow_again = smaller.squeeze(1).reshape(100,500,64,64)\n",
-    "print(grow_again.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
    "outputs": [
@@ -325,10 +189,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#make a dictionary with train data of every size 128->2\n",
+    "\n",
+    "def make_dict_all_sizes(data):\n",
+    "    \"\"\"\n",
+    "    Makes a dictionary of data at every refinedment size from current->2\n",
+    "    \n",
+    "    inputs:\n",
+    "        data: tensor(or array) of size (n_points, n_timesteps, dim, dim)\n",
+    "        \n",
+    "    outputs: \n",
+    "        dic: dictionary of tensors. Keys are dim size, tensors are size (n_points, n_timesteps, dim, dim)\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    \n",
+    "    n_points, n_timesteps, dim, _ = data.shape\n",
+    "    \n",
+    "    if not torch.is_tensor(data): #needs to be a tensor\n",
+    "        data = torch.tensor(data)\n",
+    "        \n",
+    "    assert isPowerOfTwo(dim)\n",
+    "        \n",
+    "    dic = {str(dim): data}\n",
+    "    \n",
+    "    for i in range(int(np.log2(dim))):\n",
+    "        #decrease\n",
+    "        print(\"i = \", i)\n",
+    "        data = ave_one_level(data)\n",
+    "        dic[str(data.shape[-1])] = data\n",
+    "    \n",
+    "    print(dic.keys)\n",
+    "    \n",
+    "    return dic\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "i =  0\n",
+      "Transforming\n",
+      "reshape to print\n",
+      "i =  1\n",
+      "Transforming\n",
+      "reshape to print\n",
+      "i =  2\n",
+      "Transforming\n",
+      "reshape to print\n",
+      "i =  3\n",
+      "Transforming\n",
+      "reshape to print\n",
+      "i =  4\n",
+      "Transforming\n",
+      "reshape to print\n",
+      "i =  5\n",
+      "Transforming\n",
+      "reshape to print\n",
+      "i =  6\n",
+      "Transforming\n",
+      "reshape to print\n",
+      "<built-in method keys of dict object at 0x000001233BD6E300>\n"
+     ]
+    }
+   ],
+   "source": [
+    "dic = make_dict_all_sizes(train_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['128', '64', '32', '16', '8', '4', '2', '1'])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(dic.keys())"
+   ]
   }
  ],
  "metadata": {
